creat sendInfo.html

--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -75,3 +75,17 @@
 .m-auto{
 	margin: 0 auto;	
 }
+.input-txt{
+	line-height: 26px;
+	outline: none;
+	padding-left: 8px;
+}
+.inline-block{
+	display: inline-block;
+}
+.disflex{
+	display: flex;
+}
+.flexty1{
+	justify-content: space-between;
+}
