--- a/css/style1.css
+++ b/css/style1.css
@@ -2443,6 +2443,20 @@
 .m-auto {
   margin: 0 auto; }
 
+.input-txt {
+  line-height: 26px;
+  outline: none;
+  padding-left: 8px; }
+
+.inline-block {
+  display: inline-block; }
+
+.disflex {
+  display: flex; }
+
+.flexty1 {
+  justify-content: space-between; }
+
 .p1-section {
   padding-left: 40px;
   padding-top: 40px; }
@@ -2546,5 +2560,73 @@
     left: 0; }
   .p2-img-box .next {
     right: 0; }
+
+.send-info {
+  position: relative;
+  width: 300px;
+  height: 600px;
+  padding: 76px 24px;
+  margin-top: 20px;
+  background: url(../img/imgSwitch/phone.png) no-repeat center center;
+  background-size: contain; }
+
+.send-info-b {
+  position: absolute;
+  margin: 0 24px;
+  bottom: 81px;
+  left: 0;
+  right: 0;
+  padding-top: 5px;
+  border-top: 1px solid rgba(0, 0, 0, 0.3); }
+  .send-info-b .input-txt {
+    width: 155px; }
+
+.se-head {
+  width: 30px;
+  height: 30px;
+  vertical-align: middle;
+  border-radius: 50%;
+  cursor: pointer;
+  overflow: hidden; }
+
+.send-info-con {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 30px;
+  max-height: 400px;
+  overflow-y: auto; }
+  .send-info-con .flexty1 {
+    justify-content: flex-start; }
+  .send-info-con img {
+    flex-shrink: 0; }
+  .send-info-con .ml10 {
+    position: relative;
+    border-radius: 4px;
+    font-size: 12px;
+    padding: 5px;
+    background-color: #e8e8e8;
+    word-break: break-all; }
+    .send-info-con .ml10:before {
+      content: "";
+      position: absolute;
+      left: -5px;
+      border-top: 5px solid transparent;
+      border-bottom: 5px solid transparent;
+      border-right: 5px solid #e8e8e8; }
+  .send-info-con .mysend {
+    flex-direction: row-reverse; }
+    .send-info-con .mysend.flexty1 {
+      justify-content: flex-start; }
+    .send-info-con .mysend .ml10 {
+      margin-left: 0;
+      margin-right: 10px;
+      background-color: yellowgreen;
+      color: #fff; }
+      .send-info-con .mysend .ml10:before {
+        left: auto;
+        right: -5px;
+        transform: rotateY(180deg);
+        border-right-color: yellowgreen; }
 
 /*# sourceMappingURL=style1.css.map */
