--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -89,3 +89,26 @@
 .flexty1{
 	justify-content: space-between;
 }
+.text-c{
+	text-align: center;
+}
+.text-l{
+	text-left: left;
+}
+.text-r{
+	text-right: right;
+}
+.hidden{
+	display: none;	
+}
+.font-12{
+	font-size: 12px;
+}
+.text-index{
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+.green-c{
+	color: #398439;
+}
