--- a/css/style1.css
+++ b/css/style1.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -2457,6 +2458,29 @@
 .flexty1 {
   justify-content: space-between; }
 
+.text-c {
+  text-align: center; }
+
+.text-l {
+  text-left: left; }
+
+.text-r {
+  text-right: right; }
+
+.hidden {
+  display: none; }
+
+.font-12 {
+  font-size: 12px; }
+
+.text-index {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden; }
+
+.green-c {
+  color: #398439; }
+
 .p1-section {
   padding-left: 40px;
   padding-top: 40px; }
@@ -2711,5 +2735,152 @@
           border-left: 6px solid transparent;
           border-right: 6px solid transparent;
           border-top: 6px solid #fff; }
+
+.img-s2 {
+  margin: 20px auto;
+  padding: 40px;
+  background-color: #fff;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+  width: 980px; }
+  .img-s2 > div {
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3); }
+  .img-s2 .box-l {
+    width: 350px; }
+    .img-s2 .box-l img {
+      width: 310px; }
+  .img-s2 .box-r {
+    width: 550px; }
+    .img-s2 .box-r img {
+      width: 510px; }
+  .img-s2 img {
+    height: 360px; }
+
+.sg-box {
+  width: 300px;
+  min-height: 400px;
+  margin-top: 30px;
+  background-color: #dee7e7;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5); }
+  .sg-box .head, .sg-box .list {
+    margin: 0 15px; }
+  .sg-box .head {
+    position: relative;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #204D74; }
+    .sg-box .head h3 {
+      color: #185a84;
+      font-family: "宋体"; }
+    .sg-box .head .clearfix {
+      position: absolute;
+      margin-top: 12px;
+      right: 0; }
+    .sg-box .head p {
+      padding: 2px 10px;
+      border: 1px solid #204D74;
+      border-right: 0;
+      font-size: 12px;
+      background-color: #dee7e7;
+      cursor: pointer; }
+      .sg-box .head p.last {
+        border-right: 1px solid #204D74; }
+      .sg-box .head p.active {
+        background-color: #fff;
+        border-bottom: 0; }
+  .sg-box .list {
+    position: relative;
+    padding: 10px 0;
+    border-bottom: 1px dashed #fff; }
+    .sg-box .list span {
+      position: absolute;
+      left: 0;
+      width: 20px;
+      line-height: 15px;
+      text-align: center;
+      background-color: #185a84;
+      color: #fff; }
+    .sg-box .list .ml25 {
+      margin-left: 25px; }
+    .sg-box .list .content {
+      position: relative; }
+      .sg-box .list .content img {
+        position: absolute;
+        left: 0;
+        width: 100px;
+        height: 70px; }
+      .sg-box .list .content .dsp {
+        margin-left: 110px;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        overflow: hidden; }
+      .sg-box .list .content .text-r {
+        position: relative; }
+        .sg-box .list .content .text-r:before {
+          content: "";
+          position: absolute;
+          right: 37px;
+          top: 7px;
+          border-top: 4px solid transparent;
+          border-bottom: 4px solid transparent;
+          border-left: 4px solid #fff; }
+      .sg-box .list .content .btn {
+        min-width: 45px;
+        background-color: #29739c;
+        color: #fff;
+        height: 22px;
+        line-height: 22px;
+        font-size: 12px;
+        letter-spacing: 2px;
+        text-indent: 10px;
+        border: none; }
+
+.up-list-box {
+  width: 400px;
+  margin-top: 30px;
+  background-color: #fff;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5); }
+  .up-list-box h4 {
+    padding: 10px;
+    background-color: #6ba542;
+    color: #fff;
+    font-family: "宋体"; }
+  .up-list-box li {
+    list-style: none;
+    padding: 5px 10px;
+    border-bottom: 1px solid #ddd;
+    font-size: 12px; }
+    .up-list-box li .icon {
+      display: inline-block;
+      width: 16px;
+      height: 16px;
+      margin-left: 10px;
+      background: url(../img/icon/edit0.png) no-repeat center center;
+      vertical-align: middle;
+      cursor: pointer; }
+      .up-list-box li .icon.hidden {
+        display: none; }
+
+.scorll-table {
+  position: relative;
+  margin-top: 100px;
+  width: 100%;
+  overflow: hidden;
+  overflow-x: auto; }
+  .scorll-table .psd {
+    position: absolute;
+    left: 0; }
+
+.table {
+  table-layout: fixed;
+  border-collapse: separate;
+  width: 100%;
+  text-align: center; }
+  .table th, .table td {
+    padding: 12px 0;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd; }
 
 /*# sourceMappingURL=style1.css.map */
